src-tauri/tests/snapshots/parsers_snapshot__opencode_detail.snap
---
source: tests/parsers_snapshot.rs
expression: detail
---
{
  "summary": {
    "id": "oc-sess-001",
    "agent_type": "open_code",
    "folder_path": "/tmp/demo",
    "folder_name": "demo",
    "title": "OpenCode demo session",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 2,
    "model": "claude-sonnet-4-6",
    "git_branch": null,
    "archived": false
  },
  "turns": [
    {
      "id": "turn-0",
      "role": "user",
      "blocks": [
        {
          "type": "text",
          "text": "hello opencode"
        }
      ],
      "timestamp": "[ts]",
      "completed_at": "[ts]"
    },
    {
      "id": "turn-1",
      "role": "assistant",
      "blocks": [
        {
          "type": "text",
          "text": "world!"
        }
      ],
      "timestamp": "[ts]",
      "usage": {
        "input_tokens": 12,
        "output_tokens": 15,
        "cache_creation_input_tokens": 0,
        "cache_read_input_tokens": 0
      },
      "duration_ms": 1000,
      "model": "claude-sonnet-4-6",
      "completed_at": "[ts]"
    }
  ],
  "session_stats": {
    "total_usage": {
      "input_tokens": 12,
      "output_tokens": 15,
      "cache_creation_input_tokens": 0,
      "cache_read_input_tokens": 0
    },
    "total_tokens": 27,
    "total_duration_ms": 1000,
    "context_window_used_tokens": 27,
    "context_window_max_tokens": 200000,
    "context_window_usage_percent": 0.0135
  }
}
