src-tauri/tests/snapshots/parsers_snapshot__opencode_tools_detail.snap
---
source: tests/parsers_snapshot.rs
expression: detail
---
{
  "summary": {
    "id": "oc-tools-001",
    "agent_type": "open_code",
    "folder_path": "/tmp/demo",
    "folder_name": "demo",
    "title": "OpenCode tool session",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 2,
    "model": "claude-sonnet-4-6",
    "git_branch": null,
    "archived": false
  },
  "turns": [
    {
      "id": "turn-0",
      "role": "user",
      "blocks": [
        {
          "type": "text",
          "text": "polish the greeting"
        }
      ],
      "timestamp": "[ts]",
      "completed_at": "[ts]"
    },
    {
      "id": "turn-1",
      "role": "assistant",
      "blocks": [
        {
          "type": "text",
          "text": "Loading the skill."
        },
        {
          "type": "tool_use",
          "tool_use_id": "call_skill",
          "tool_name": "skill",
          "input_preview": "{\"name\":\"demo-skill\",\"skill\":\"demo-skill\"}"
        },
        {
          "type": "tool_result",
          "tool_use_id": "call_skill",
          "output_preview": "# Skill: demo-skill\n\n1. Read the target file.\n2. Apply the change.",
          "is_error": false
        },
        {
          "type": "tool_use",
          "tool_use_id": "call_read",
          "tool_name": "read",
          "input_preview": "{\"file_path\":\"src/app.ts\"}"
        },
        {
          "type": "tool_result",
          "tool_use_id": "call_read",
          "output_preview": "{\"content\":\"export function greet(name: string) {\\n  return `hello ${name}`\\n}\",\"start_line\":1}",
          "is_error": false
        },
        {
          "type": "tool_use",
          "tool_use_id": "call_edit",
          "tool_name": "edit",
          "input_preview": "{\"_start_line\":2,\"file_path\":\"src/app.ts\",\"new_string\":\"Hello, ${name}!\",\"old_string\":\"hello ${name}\"}"
        },
        {
          "type": "tool_result",
          "tool_use_id": "call_edit",
          "output_preview": "Edit applied successfully.",
          "is_error": false
        },
        {
          "type": "tool_use",
          "tool_use_id": "call_write",
          "tool_name": "write",
          "input_preview": "{\"content\":\"export const A = 1\\n\",\"file_path\":\"src/new.ts\"}"
        },
        {
          "type": "tool_result",
          "tool_use_id": "call_write",
          "output_preview": "Wrote file successfully.",
          "is_error": false
        },
        {
          "type": "tool_use",
          "tool_use_id": "call_grep",
          "tool_name": "grep",
          "input_preview": "{\"glob\":\"*.ts\",\"path\":\".\",\"pattern\":\"VERSION\"}"
        },
        {
          "type": "tool_result",
          "tool_use_id": "call_grep",
          "output_preview": "Found 1 matches",
          "is_error": false
        },
        {
          "type": "tool_use",
          "tool_use_id": "call_task",
          "tool_name": "Agent",
          "input_preview": "{\"description\":\"Inspect VERSION\",\"model\":\"claude-sonnet-4-6\",\"prompt\":\"Find the VERSION constant and report it.\",\"subagent_type\":\"general\"}"
        },
        {
          "type": "tool_result",
          "tool_use_id": "call_task",
          "output_preview": "VERSION is 1.0.0",
          "is_error": false,
          "agent_stats": {
            "agent_type": "general",
            "status": "completed",
            "total_duration_ms": 500,
            "total_tool_use_count": 2,
            "tool_calls": [
              {
                "tool_name": "edit",
                "input_preview": "{\"file_path\":\"src/app.ts\",\"new_string\":\"  VERSION = \\\"1.0.1\\\"\\n\",\"old_string\":\"  VERSION = \\\"1.0.0\\\"\\n\"}",
                "output_preview": "Edit applied successfully.",
                "is_error": false
              },
              {
                "tool_name": "read",
                "input_preview": "{\"file_path\":\"src/gone.ts\"}",
                "output_preview": "File not found: /tmp/demo/src/gone.ts",
                "is_error": true
              }
            ]
          }
        },
        {
          "type": "tool_use",
          "tool_use_id": "call_edit_fail",
          "tool_name": "edit",
          "input_preview": "{\"file_path\":\"src/missing.ts\",\"new_string\":\"yep\",\"old_string\":\"nope\"}"
        },
        {
          "type": "tool_result",
          "tool_use_id": "call_edit_fail",
          "output_preview": "File /tmp/demo/src/missing.ts not found",
          "is_error": true
        }
      ],
      "timestamp": "[ts]",
      "usage": {
        "input_tokens": 400,
        "output_tokens": 340,
        "cache_creation_input_tokens": 0,
        "cache_read_input_tokens": 800
      },
      "duration_ms": 7000,
      "model": "claude-sonnet-4-6",
      "completed_at": "[ts]"
    }
  ],
  "session_stats": {
    "total_usage": {
      "input_tokens": 400,
      "output_tokens": 340,
      "cache_creation_input_tokens": 0,
      "cache_read_input_tokens": 800
    },
    "total_tokens": 1540,
    "total_duration_ms": 7000,
    "context_window_used_tokens": 1540,
    "context_window_max_tokens": 200000,
    "context_window_usage_percent": 0.77
  }
}
